k8s/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-axon
  labels:
    app: zk-axon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zk-axon
  template:
    metadata:
      labels:
        app: zk-axon
    spec:
      volumes:
        - name: config
          configMap:
            name: zk-axon
      containers:
        - name: zk-axon
          image: zk-axon:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /zk/config
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            successThreshold: 3
          env: # Setting Enviornmental Variables
            - name: PL_POSTGRES_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef: #R: Do we need permissecret permission for the
                  name: postgres-postgresql
                  key: postgres-password
