k8s/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-axon
  labels:
    app: zk-axon
spec:
  selector:
    app: zk-axon
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
