k8s/minikube/axon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zk-axon-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$
spec:
  ingressClassName: nginx
  rules:
    - host: axon.avinpx07.getanton.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zk-axon
                port:
                  number: 80
